changed selectors for card images because when you hovered over ampharos brand it selected that image too. have to go back and fix the js so that there is no card/whiteness behind each poke card.

--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -8,24 +8,25 @@ nav{
     font-family: 'Manrope', sans-serif;
 }
 
-.card{
+.pokes{
     width: 250px;
     height: 350px;
     cursor: pointer;
     /* border-radius: 10px; */
     border: none;
 }
-.m-n1{
-    margin: 20px 20px 20px 20px;
-}
 
-img:hover {
+.pokes:hover {
     transform: scale(1.10);
     box-shadow: 0 0 5px #fff, 0 0 19px #f0f, 0 0 40px #0ff;
     /* inset 0px 0px 8px rgb(198, 170, 204), 0 0 15px rgb(198, 170, 204); */
     /* 0 0 60px 30px #fff,  inner white
     0 0 100px 60px #f0f, middle magenta
     0 0 140px 90px #0ff; outer cyan */
+}
+
+.m-n1{
+    margin: 20px 20px 20px 20px;
 }
 
 /* makes last row line up w rest of cards. */
